add more files~

--- a/RgFem/src/CMakeLists.txt
+++ b/RgFem/src/CMakeLists.txt
@@ -6,12 +6,17 @@ target_compile_definitions(RgFem PRIVATE RgFem_Module)
 
 target_include_directories(${TARGET_NAME} PRIVATE ${SOURCE_DIR})
 
+set(THIRD_PARTY_ROOT "D:/Lzs/PhysicEngine/FEM_Project/lzsfem/ThirdParty")
 
+#Add CLI11 Library, a head only comand parse library
+set(CLI11_INCLUDE_DIR "${THIRD_PARTY_ROOT}/cli11-src/include")
+target_include_directories(${TARGET_NAME} PRIVATE ${CLI11_INCLUDE_DIR})
 
+#Add Eigen3 Library
 set(Eigen_Root "D:/Program Files/eigen-3.4.0/eigen-3.4.0")
 target_include_directories(${TARGET_NAME} PRIVATE ${Eigen_Root})
 
-#set(Eigen3_INCLUDE_DIR "D:/ThirdParty/eigen3")
+#set(Eigen3_INCLUDE_DIR "D:/ThirdParty/eigen3") //at home
 
 message(status "flzs****${CMAKE_MODULE_PATH}")
 
@@ -23,6 +28,8 @@ if(Eigen3_FOUND)
   message(status "Eigen3 found****")
   include_directories(${Eigen3_INCLUDE_DIR})
 endif()
+
+
 
 file(GLOB rootfiles *.cpp *.h)
 source_group("" FILES ${rootfiles})
