--- a/RgFem/src/femcore/CMakeLists.txt
+++ b/RgFem/src/femcore/CMakeLists.txt
@@ -1,47 +1,3 @@
-set(TARGET_NAME RgFem)
-project(${TARGET_NAME} LANGUAGES CXX)
-set(SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR})
-add_library(${TARGET_NAME} SHARED "")
-target_compile_definitions(RgFem PRIVATE RgFem_Module)
-
-target_include_directories(${TARGET_NAME} PRIVATE ${SOURCE_DIR})
-
-#Add CLI11 Library, a head only comand parse library
-set(CLI11_INCLUDE_DIR "${THIRD_PARTY_ROOT}/cli11-src/include")
-target_include_directories(${TARGET_NAME} PRIVATE ${CLI11_INCLUDE_DIR})
-message(status "Third party root is ****${THIRD_PARTY_ROOT}")
-
-#Add Eigen3 Library
-set(Eigen_Root "D:/Program Files/eigen-3.4.0/eigen-3.4.0")
-target_include_directories(${TARGET_NAME} PRIVATE ${Eigen_Root})
-
-#set(Eigen3_INCLUDE_DIR "D:/ThirdParty/eigen3") //at home
-
-message(status "flzs****${CMAKE_MODULE_PATH}")
-
-# 找到Eigen库
-#find_package(Eigen3 3.3 REQUIRED)
- 
-# 如果找到Eigen库，则将其包含目录添加到你的项目中
-if(Eigen3_FOUND)
-  message(status "Eigen3 found****")
-  include_directories(${Eigen3_INCLUDE_DIR})
-endif()
-
-set(PROJECT_SOURCES "")
-
-# add app sources
-set(APP_SOURCES "")
-add_subdirectory(app)
-source_group("app" FILES ${APP_SOURCES})
-message(status "resource files is ${APP_SOURCES}")
-
-# add basicio sources
-set(BASICIO_SOURCES "")
-add_subdirectory(basicio)
-source_group("basicio" FILES ${BASICIO_SOURCES})
-
-# add femcore sources
 set(FEMCORE_HEADERS
     femcore/Callback.h
     femcore/DOFS.h
@@ -369,296 +325,4 @@ set(FEMCORE_SOURCES
     femcore/fecore_type.cpp
 )
 
-set(PROJECT_SOURCES
-    ${PROJECT_SOURCES}
-    ${FEMCORE_HEADERS}
-    ${FEMCORE_SOURCES}
-)
-source_group("femcore" FILES ${FEMCORE_HEADERS} ${FEMCORE_SOURCES})
-
-# add datastructure sources
-set(DATA_STRUCTURE_HEADERS
-    datastructure/FEBoundingBox.h
-    datastructure/MathObject.h
-    datastructure/MathUtils.h
-    datastructure/Matrix2d.h
-    datastructure/Matrix3d.h
-    datastructure/Matrix3d.hpp
-    datastructure/MatrixOperator.h
-    datastructure/MatrixProfile.h
-    datastructure/Vector2d.h
-    datastructure/Vector3d.h
-    datastructure/mathalg.h
-    datastructure/matrix.h
-    datastructure/quatd.h
-    datastructure/tens3d.h
-    datastructure/tens3d.hpp
-    datastructure/tens3dls.hpp
-    datastructure/tens3drs.hpp
-    datastructure/tens3ds.hpp
-    datastructure/tens4d.h
-    datastructure/tens4d.hpp
-    datastructure/tens4dmm.hpp
-    datastructure/tens4dms.hpp
-    datastructure/tens4ds.hpp
-    datastructure/tensor_base.h
-    datastructure/units.h
-    datastructure/vector_operator.h
-)
-
-set(DATA_STRUCTURE_SOURCES
-    datastructure/MathObject.cpp
-    datastructure/Matrix3d.cpp
-    datastructure/mathalg.cpp
-    datastructure/matrix.cpp
-    datastructure/quatd.cpp
-    datastructure/tens3d.cpp
-    datastructure/tens4d.cpp
-    datastructure/vector_operator.cpp
-)
-
-set(PROJECT_SOURCES
-    ${PROJECT_SOURCES}
-    ${DATA_STRUCTURE_HEADERS}
-    ${DATA_STRUCTURE_SOURCES}
-)
-source_group("datastructure" FILES ${DATA_STRUCTURE_HEADERS} ${DATA_STRUCTURE_SOURCES})
-
-#add element sources
-set(ELEMENT_HEADERS
-    elements/ElementShape/FEHex8Shape.h
-    elements/ElementShape/FESolidElementShape.h
-    elements/ElementShape/RgElementShape.h
-    elements/FEElemElemList.h
-    elements/FEElementLibrary.h
-    elements/FEElementList.h
-    elements/FEElementSet.h
-    elements/FEElementShape.h
-    elements/FEElementTraits.h
-    elements/FEShellElement.h
-    elements/FESolidElement.h
-    elements/RgBeamElement.h
-    elements/RgElemTypeDefine.h
-    elements/RgElement.h
-    elements/RgElementState.h
-    elements/RgElementStatus.h
-    elements/RgSolidElement2d.h
-    elements/RgTrussElement.h
-)
-
-set(ELEMENT_SOURCES
-    elements/ElementShape/FESolidElementShape.cpp
-    elements/FEElemElemList.cpp
-    elements/FEElementLibrary.cpp
-    elements/FEElementList.cpp
-    elements/FEElementSet.cpp
-    elements/FEElementShape.cpp
-    elements/FEElementTraits.cpp
-    elements/FEShellElement.cpp
-    elements/FESolidElement.cpp
-    elements/RgElement.cpp
-)
-set(PROJECT_SOURCES
-    ${PROJECT_SOURCES}
-    ${ELEMENT_HEADERS}
-    ${ELEMENT_SOURCES}
-)
-source_group("elements" FILES ${ELEMENT_HEADERS} ${ELEMENT_SOURCES})
-
-#add input sources
-set(INPUT_HEADERS
-    input/XML/XMLReader.h
-    input/XML/XMLWriter.h
-    input/abaqus/AbaqusExport.h
-    input/abaqus/AbaqusImport.h
-    input/abaqus/AbaqusModel.h
-    input/abaqus/AbaqusParser.h
-    input/febio/FEBModel.h
-    input/febio/FEBioBoundarySection.h
-    input/febio/FEBioBoundarySection3.h
-    input/febio/FEBioCodeSection.h
-    input/febio/FEBioConstraintsSection.h
-    input/febio/FEBioContactSection.h
-    input/febio/FEBioControlSection.h
-    input/febio/FEBioControlSection4.h
-    input/febio/FEBioDiscreteSection.h
-    input/febio/FEBioGeometrySection.h
-    input/febio/FEBioGlobalsSection.h
-    input/febio/FEBioImport.h
-    input/febio/FEBioIncludeSection.h
-    input/febio/FEBioInitialSection.h
-    input/febio/FEBioInitialSection3.h
-    input/febio/FEBioLoadDataSection.h
-    input/febio/FEBioLoadsSection.h
-    input/febio/FEBioMaterialSection.h
-    input/febio/FEBioMeshAdaptorSection.h
-    input/febio/FEBioMeshDataSection.h
-    input/febio/FEBioMeshDomainsSection4.h
-    input/febio/FEBioMeshSection.h
-    input/febio/FEBioMeshSection4.h
-    input/febio/FEBioModelBuilder.h
-    input/febio/FEBioModuleSection.h
-    input/febio/FEBioOutputSection.h
-    input/febio/FEBioRigidSection.h
-    input/febio/FEBioRigidSection4.h
-    input/febio/FEBioStepSection.h
-    input/febio/FEBioStepSection4.h
-    input/febio/FEModelBuilder.h
-    input/febio/FEPlotDataStore.h
-    input/febio/FERestartImport.h
-    input/febio/FileImport.h
-    input/febio/febioxml_api.h
-    input/febio/stdafx.h
-    input/febio/xmltool.h
-    input/oofem/abaqus_input_parser.h
-    input/oofem/datareader.h
-    input/oofem/dynamic_data_reader.h
-    input/oofem/dynamic_input_record.h
-    input/oofem/inputrecord.h
-    input/oofem/text_data_reader.h
-    input/oofem/text_input_record.h
-    input/oofem/tokenizer.h
-)
-
-set(INPUT_SOURCES
-    input/XML/XMLReader.cpp
-    input/XML/XMLWriter.cpp
-    input/abaqus/AbaqusExport.cpp
-    input/abaqus/AbaqusImport.cpp
-    input/abaqus/AbaqusModel.cpp
-    input/febio/FEBModel.cpp
-    input/febio/FEBioBoundarySection.cpp
-    input/febio/FEBioBoundarySection3.cpp
-    input/febio/FEBioCodeSection.cpp
-    input/febio/FEBioConstraintsSection.cpp
-    input/febio/FEBioContactSection.cpp
-    input/febio/FEBioControlSection.cpp
-    input/febio/FEBioControlSection4.cpp
-    input/febio/FEBioDiscreteSection.cpp
-    input/febio/FEBioGeometrySection.cpp
-    input/febio/FEBioGlobalsSection.cpp
-    input/febio/FEBioImport.cpp
-    input/febio/FEBioIncludeSection.cpp
-    input/febio/FEBioInitialSection.cpp
-    input/febio/FEBioInitialSection3.cpp
-    input/febio/FEBioLoadDataSection.cpp
-    input/febio/FEBioLoadsSection.cpp
-    input/febio/FEBioMaterialSection.cpp
-    input/febio/FEBioMeshAdaptorSection.cpp
-    input/febio/FEBioMeshDataSection.cpp
-    input/febio/FEBioMeshDataSection4.cpp
-    input/febio/FEBioMeshDomainsSection4.cpp
-    input/febio/FEBioMeshSection.cpp
-    input/febio/FEBioMeshSection4.cpp
-    input/febio/FEBioModelBuilder.cpp
-    input/febio/FEBioModuleSection.cpp
-    input/febio/FEBioOutputSection.cpp
-    input/febio/FEBioRigidSection.cpp
-    input/febio/FEBioRigidSection4.cpp
-    input/febio/FEBioStepSection.cpp
-    input/febio/FEBioStepSection4.cpp
-    input/febio/FEModelBuilder.cpp
-    input/febio/FEPlotDataStore.cpp
-    input/febio/FERestartImport.cpp
-    input/febio/FileImport.cpp
-    input/febio/xmltool.cpp
-    input/oofem/dynamic_data_reader.cpp
-    input/oofem/dynamic_input_record.cpp
-    input/oofem/inputrecord.cpp
-    input/oofem/text_data_reader.cpp
-    input/oofem/text_input_record.cpp
-    input/oofem/tokenizer.cpp
-)
-set(PROJECT_SOURCES
-    ${PROJECT_SOURCES}
-    ${INPUT_HEADERS}
-    ${INPUT_SOURCES}
-)
-source_group("input" FILES ${INPUT_HEADERS} ${INPUT_SOURCES})
-
-#add logger sources
-set(LOGGER_HEADERS
-    logger/LogFileStream.h
-    logger/LogStream.h
-    logger/Logfile.h
-    logger/error.h
-    logger/log.h
-    logger/logger.h
-    logger/verbose.h
-)
-
-set(LOGGER_SOURCES
-    logger/LogFileStream.cpp
-    logger/LogStream.cpp
-    logger/Logfile.cpp
-    logger/error.cpp
-    logger/log.cpp
-    logger/logger.cpp
-)
-set(PROJECT_SOURCES
-    ${PROJECT_SOURCES}
-    ${LOGGER_HEADERS}
-    ${LOGGER_SOURCES}
-)
-source_group("logger" FILES ${LOGGER_HEADERS} ${LOGGER_SOURCES})
-
-#add material sources
-set(MATERIAL_HEADERS
-    materials/ElastoPlasticMaterial.h
-    materials/FEElasticMaterial.h
-    materials/FEElasticMaterialPoint.h
-    materials/FEIsotropicElastic.h
-    materials/FEMaterial.h
-    materials/FEMaterialPoint.h
-    materials/FESolidMaterial.h
-)
-
-set(MATERIAL_SOURCES
-    materials/ElastoPlasticMaterial.cpp
-    materials/FEElasticMaterial.cpp
-    materials/FEElasticMaterialPoint.cpp
-    materials/FEIsotropicElastic.cpp
-    materials/FEMaterial.cpp
-    materials/FEMaterialPoint.cpp
-    materials/FESolidMaterial.cpp
-)
-set(PROJECT_SOURCES
-    ${PROJECT_SOURCES}
-    ${MATERIAL_HEADERS}
-    ${MATERIAL_SOURCES}
-)
-source_group("materials" FILES ${MATERIAL_HEADERS} ${MATERIAL_SOURCES})
-
-#add plotfile sources
-set(PLOT_FILE_HEADERS
-    plotfile/FEBioPlotFile.h
-    plotfile/PlotFile.h
-    plotfile/PltArchive.h
-)
-
-set(PLOT_FILE_SOURCES
-    plotfile/FEBioPlotFile.cpp
-    plotfile/PlotFile.cpp
-    plotfile/PltArchive.cpp
-)
-set(PROJECT_SOURCES
-    ${PROJECT_SOURCES}
-    ${PLOT_FILE_HEADERS}
-    ${PLOT_FILE_SOURCES}
-)
-source_group("plotfile" FILES ${PLOT_FILE_HEADERS} ${PLOT_FILE_SOURCES})
-
-target_sources(${TARGET_NAME} PRIVATE ${PROJECT_SOURCES})
-
-#file(GLOB rootfiles *.cpp *.h)
-#source_group("" FILES ${rootfiles})
-#target_sources(${TARGET_NAME} PRIVATE ${rootfiles})
-#
-#sub_dir_list(SUB_DIRS ${SOURCE_DIR})
-#
-#foreach(sub_dir ${SUB_DIRS})
-#    file(GLOB subdir_files ${sub_dir}/*.cpp ${sub_dir}/*.h)
-#    string(REPLACE "/" "\\" sub_dir ${sub_dir})
-#    source_group(${sub_dir} FILES ${subdir_files})
-#    target_sources(${TARGET_NAME} PRIVATE ${subdir_files})
-#endforeach()
+set(FEMCORE_)
